src/testData/analysis/globalMatchData/indexAssign.cr
<error descr="Assignment is not allowed for global match data index">$1</error> = 1
<error descr="Assignment is not allowed for global match data index">$1</error>, a = 1, 2